--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.16)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
 project(PekingExpressProject VERSION 1.0
                   DESCRIPTION "PekingExpress assignment"
@@ -7,6 +10,12 @@ project(PekingExpressProject VERSION 1.0
 set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
 include_directories("${CMAKE_SOURCE_DIR}/include"
 					"./include")
+
+
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "No build type selected, default to Debug")
+  set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Build type (default Debug)" FORCE)
+endif()
 
 # version information
 if(NOT DEFINED PekingExpressProject_VERSION_MAJOR)
